--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Virtuality.Inc</title>
-		<link rel="stylesheet" href="../css1.css"/>
-		<link rel="icon" type= "image" href="../img/nyu.png"/>
+		<link rel="stylesheet" href="./css1.css"/>
+		<link rel="icon" type= "image" href="./img/nyu.png"/>
 
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -71,7 +71,7 @@
 				    </div><!-- /.navbar-collapse -->
 				  </div><!-- /.container-fluid -->
 				</nav>
-			<img class="container" src="../img/tandon.jpg" alt= Tandon />
+			<img class="container" src="./img/tandon.jpg" alt= Tandon />
 			<header>
 			<h1>Steve Deng is the CEO</h1>
 			<h2>Co-founders</h2>
