--- a/index.html
+++ b/index.html
@@ -32,20 +32,22 @@
 				    </div>
 
 				    <!-- Collect the nav links, forms, and other content for toggling -->
-				    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				    <div class="collapse navbar-collapse" id="avbar-collapse-1">
 				      <ul class="nav navbar-nav">
-				        <li class="active"><a href="http://www.shodan.io"><b>Shodan</b><span class="sr-only"></span></a></li>
-				        <li><a href="http://www.google.com"><b>Google</b></a></li>
+				        <li class="active"><a href="https://www.linkedin.com/in/zishi-steve-deng-458883112"><b>Linkedin</b><span class="sr-only"></span></a></li>
+				        <li><a href="http://stackoverflow.com/users/6918919/steve-deng-zishi?tab=profile"><b>StackOverflow</b></a></li>
 				        <li class="dropdown">
-				          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Portfolio <span class="caret"></span></a>
+				          <a href="https://github.com/SteveDengZishi" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><b>GitHub Portfolio</b><span class="caret"></span></a>
 				          <ul class="dropdown-menu">
-				            <li><a href="#">Action</a></li>
-				            <li><a href="#">Another action</a></li>
-				            <li><a href="#">Something else here</a></li>
+				            <li><a href="https://github.com/SteveDengZishi/python-web-access">Web Scrapping in Python</a></li>
 				            <li role="separator" class="divider"></li>
-				            <li><a href="#">Separated link</a></li>
+				            <li><a href="#">NYC Subway BFS in C++</a></li>
 				            <li role="separator" class="divider"></li>
-				            <li><a href="#">One more separated link</a></li>
+				            <li><a href="#">ISO-Pass IOS App</a></li>
+				            <li role="separator" class="divider"></li>
+				            <li><a href="https://github.com/SteveDengZishi/PersonalWebPage">Personal WebPage</a></li>
+				            <li role="separator" class="divider"></li>
+				            <li><a href="#">Infix to Postfix Caculator in Java</a></li>
 				          </ul>
 				        </li>
 				      </ul>
@@ -56,15 +58,13 @@
 				        <button type="submit" class="btn btn-default">Submit</button>
 				      </form>
 				      <ul class="nav navbar-nav navbar-right">
-				        <li><a href="https://www.google.com/maps/place/New+York+University's+Courant+Institute+of+Mathematical+Sciences/@40.7286647,-73.9978862,17z/data=!3m1!4b1!4m5!3m4!1s0x89c259906d060f39:0xd3568256090e73ed!8m2!3d40.7286607!4d-73.9956975">Directions</a></li>
+				        <li><a href="https://www.google.com/maps/place/New+York+University's+Courant+Institute+of+Mathematical+Sciences/@40.7286647,-73.9978862,17z/data=!3m1!4b1!4m5!3m4!1s0x89c259906d060f39:0xd3568256090e73ed!8m2!3d40.7286607!4d-73.9956975"><b>Directions</b></a></li>
 				        <li class="dropdown">
-				          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Details <span class="caret"></span></a>
+				          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><b>Contact Us</b><span class="caret"></span></a>
 				          <ul class="dropdown-menu">
-				            <li><a href="#">Action</a></li>
-				            <li><a href="#">Another action</a></li>
-				            <li><a href="#">Something else here</a></li>
+				            <li><a href="#">Email - zd475@nyu.edu</a></li>
 				            <li role="separator" class="divider"></li>
-				            <li><a href="#">Separated link</a></li>
+				            <li><a href="#">Cell - 7753575903</a></li>
 				          </ul>
 				        </li>
 				      </ul>
@@ -74,18 +74,19 @@
 			<img class="container" src="./img/courant.png" alt= Courant/>
 		</header>
 		<br><br>
-			<h1>Steve Deng Zishi is the CEO</h1>
-			<br>
+		<section id="left">
+			<img class="container" id="photo" src="./img/photo.jpg" alt= Steve_DengZishi/>
+		</section>
+		<section id="right">
+			<h1>Steve Deng Zishi</h1>
+			<p>Founder of Virtuality.Inc</p>
 			<h2>Co-founders</h2>
 			<nav>
-				<a href="https://www.linkedin.com/in/zishi-steve-deng-458883112">Steve Deng Zishi</a>
-				<a href="https://uk.linkedin.com/in/pinzhenchen">Patrick Chen</a>
+				<a href="https://www.linkedin.com/in/zishi-steve-deng-458883112"><b>Steve Deng Zishi</b></a>
+				<a href="https://uk.linkedin.com/in/pinzhenchen"><b>Patrick Chen</b></a>
 			</nav>
-			<section>
 				<h3>Welcome!</h3>
 				<p>The future is awaiting</p>
-			</section>
-			<section>
 				<h4>Explanation & Services</h4>
 				<p>Virtual Reality Simulator</p>
 				<p>Witness the power of perceiving</p>
@@ -94,6 +95,6 @@
 		<br>
 		<br>
 		<br>
-		<footer>All rights reserved		Virtuality.Inc</footer>
+		<footer id="bottom">All rights reserved		Virtuality.Inc</footer>
 	</body>
 </html>
