--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<!-- Latest compiled and minified JavaScript -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 	</head>
+	<center>
 	<body>
 		<main>
 			<header class="container">
@@ -97,4 +98,5 @@
 		<br>
 		<footer id="bottom">All rights reserved		Virtuality.Inc</footer>
 	</body>
+	<center>
 </html>
