--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Virtuality.Inc</title>
+		<title>Zishi's Personal Website</title>
 		<link rel="stylesheet" href="./css1.css"/>
 		<link rel="icon" type= "image" href="./img/nyu.png"/>
 
@@ -29,7 +29,7 @@
 				        <span class="icon-bar"></span>
 				        <span class="icon-bar"></span>
 				      </button>
-				      <a class="navbar-brand" href="./index2.html"><b>Assignment1</b></a>
+				      <a class="navbar-brand" href="#"><b>DUFFIELD BROTHERS</b></a>
 				    </div>
 
 				    <!-- Collect the nav links, forms, and other content for toggling -->
@@ -42,13 +42,13 @@
 				          <ul class="dropdown-menu">
 				            <li><a href="https://github.com/SteveDengZishi/python-web-access">Web Scrapping in Python</a></li>
 				            <li role="separator" class="divider"></li>
-				            <li><a href="#">NYC Subway BFS in C++</a></li>
+				            <li><a href="https://github.com/SteveDengZishi/ACM_UVA_algorithmic_problem_solving">ACM-ICPC Competitive Programming</a></li>
 				            <li role="separator" class="divider"></li>
-				            <li><a href="#">ISO-Pass IOS App</a></li>
+				            <li><a href="https://github.com/SteveDengZishi/HackerRank">Hacker-rank Practices</a></li>
 				            <li role="separator" class="divider"></li>
-				            <li><a href="https://github.com/SteveDengZishi/PersonalWebPage">Personal WebPage</a></li>
+				            <li><a href="https://github.com/SteveDengZishi/ChickenFight">Chicken Fight Python Game</a></li>
 				            <li role="separator" class="divider"></li>
-				            <li><a href="#">Infix to Postfix Caculator in Java</a></li>
+				            <li><a href="https://github.com/SteveDengZishi/Graph_Partitioning_Research">Social Graph Partitioning Algorithm Research</a></li>
 				          </ul>
 				        </li>
 				      </ul>
@@ -80,23 +80,23 @@
 		</section>
 		<section id="right">
 			<h1>Steve Deng Zishi</h1>
-			<p>Founder of Virtuality.Inc</p>
+			<p>Founder of Duffield Brothers LLC</p>
 			<h2>Co-founders</h2>
 			<nav>
 				<a href="https://www.linkedin.com/in/zishi-steve-deng-458883112"><b>Steve Deng Zishi</b></a>
-				<a href="https://uk.linkedin.com/in/pinzhenchen"><b>Patrick Chen</b></a>
+				<a href="#"><b>Yu Gui</b></a>
 			</nav>
-				<h3>Welcome!</h3>
-				<p>The future is awaiting</p>
-				<h4>Explanation & Services</h4>
-				<p>Virtual Reality Simulator</p>
-				<p>Witness the power of perceiving</p>
+				<h3>Welcome to my Personal Website!</h3>
+				<p>You can check my portfolio using the top menu bar</p>
+				<h4>Duffield Brothers LLC Services</h4>
+				<p>Digital asset trading such as Bitcoin & Ether</p>
+				<p>Registered in Delaware</p>
 			</section>
 		</main>
 		<br>
 		<br>
 		<br>
-		<footer id="bottom">All rights reserved		Virtuality.Inc</footer>
+		<footer id="bottom">All rights reserved  Duffield Brothers LLC</footer>
 	</body>
 	<center>
 </html>
